🤘 Whoa, we got some serious upgrades here! 🚀 - Implemented a slick new "Clear History" feature 💥 - Refined the modal content styling for a kick-ass markdown experience 📝 - Tweaked the swipe gestures - now swipe right for help, swipe left to clear that shit 👈👉 - Added an "inverted" utility class for when you wanna get all dark mode up in here 🌚 - Other minor improvements and bug fixes 🐛🔨
Fuck yeah, this update is gonna make Orbiting even more badass! 😎 Keep rockin' that codespace, you magnificent bastards! 🎸

--- a/assets/scss/_utilities.scss
+++ b/assets/scss/_utilities.scss
@@ -25,3 +25,9 @@
     border-radius: 0;
   }
 }
+
+
+.inverted {
+  filter: invert(100%);
+  background: #000;
+}
